Исправленны комментарии
Исправлены небольшие баги