@@ -1,68 +1,78 @@
-package com.example.telegrambot.service.messageSenders;
+package com.example.telegrambot.service.messagesenders;
 
 import com.example.telegrambot.TelegramObject;
 import com.example.telegrambot.model.UserRoles;
-
 import com.example.telegrambot.repository.UserRolesRepository;
-import org.apache.log4j.Logger;
-import org.springframework.beans.factory.annotation.Autowired;
+import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Component;
 
 import java.time.Duration;
 import java.time.LocalDateTime;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Component
+@Slf4j
 public class AdminMessageSender extends MessageSender {
-
-    private static final Logger LOGGER = Logger.getLogger(AdminMessageSender.class);
 
     private List<Long> administratorsIdList;
 
-    @Autowired
-    UserRolesRepository userRolesRepository;
+    private final UserRolesRepository userRolesRepository;
 
     private LocalDateTime lastAdminListUpdateTime;
 
+    public AdminMessageSender(UserRolesRepository userRolesRepository) {
+        this.userRolesRepository = userRolesRepository;
+    }
+
+    /**
+     * Sends a message with the specified text to all administrators.
+     *
+     * @param messageText the text of the message
+     */
     public void sendMessageToAllAdmin(String messageText) {
         for (Long adminId : getAdministratorsIdList()) {
             newSendMessage();
             getSendMessage().setChatId(adminId);
             sendMessage(messageText);
-            LOGGER.info(String.format("Sent message to admin with chat ID: %s", adminId));
+            log.debug("Sent message to admin with chat ID: {}", adminId);
         }
     }
 
+    /**
+     * Sends a message with the specified text and TelegramObject to all administrators.
+     *
+     * @param text           the text of the message
+     * @param telegramObject the TelegramObject containing the chat ID
+     */
     public void sendMessageToAllAdmin(String text, TelegramObject telegramObject) {
         String messageText = "ОСТАВЛЕН НОВЫЙ ОТЗЫВ!\n\n" + telegramObject.stringFrom() + ": \n\n" + text;
         sendMessageToAllAdmin(messageText);
     }
 
     /**
-     * Получает список идентификаторов пользователей с ролью администратора из репозитория.
+     * Fetches the list of user IDs with the "admin" role from the repository.
      */
     private void fetchAdminUserIds() {
         List<UserRoles> adminRoles = userRolesRepository.findAllByRole("admin");
 
         administratorsIdList = adminRoles.stream()
                 .map(UserRoles::getChatId)
-                .collect(Collectors.toList());
+                .toList();
 
         lastAdminListUpdateTime = LocalDateTime.now();
-        LOGGER.info("Admin user IDs fetched and list updated");
+        log.debug("Admin user IDs fetched and list updated");
     }
 
     /**
-     * Возвращает список идентификаторов пользователей с ролью администратора.
-     * Если с момента последнего обновления прошел час или более, обновляет список администраторов.
+     * Returns the list of user IDs with the "admin" role. If an hour or more has passed since the last update,
+     * updates the list of administrators.
      *
-     * @return список идентификаторов пользователей с ролью администратора
+     * @return the list of user IDs with the "admin" role
      */
     public List<Long> getAdministratorsIdList() {
         if (lastAdminListUpdateTime == null) {
             fetchAdminUserIds();
-            LOGGER.info("Admin list fetched for the first time");
+            log.debug("Admin list fetched for the first time");
             return administratorsIdList;
         }
 
@@ -70,7 +80,7 @@ public class AdminMessageSender extends MessageSender {
 
         if (duration.toHours() > 0) {
             fetchAdminUserIds();
-            LOGGER.info("Admin list updated due to time duration");
+            log.debug("Admin list updated due to time duration");
         }
 
         return administratorsIdList;
